# GameOfLife

./: gameoflife.cabal
src/: Main.hs
