name:                gameoflife 
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Lignum
maintainer:          aut@ism.pw
-- copyright:
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable gameoflife 
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.9 && <4.10
                     , sdl2
                     , mtl
                     , random
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010
